# USVSmartContract

nft-auth-ecosystem/: Anchor.toml  Cargo.toml  package-lock.json
nft-auth-ecosystem/programs/product-auth/: Cargo.toml
nft-auth-ecosystem/programs/product-auth/src/: lib.rs
nft-auth-ecosystem/programs/purchase-verification/: Cargo.toml
nft-auth-ecosystem/programs/purchase-verification/src/: lib.rs
nft-auth-ecosystem/programs/staking-rewards/: Cargo.toml
nft-auth-ecosystem/programs/staking-rewards/src/: lib.rs
nft-auth-ecosystem/programs/usv-token/: Cargo.toml
nft-auth-ecosystem/programs/usv-token/src/: lib.rs
nft-auth-ecosystem/tests/: nft-auth-ecosystem.ts
nft-auth-frontend/: craco.config.js  package-lock.json  package.json  webpack.config.js
nft-auth-frontend/src/: App.css  App.tsx  App.tsx.backup  index.tsx  nft_auth_program.json  polyfills.ts
nft_auth_program/: Anchor.toml  package-lock.json  package.json
nft_auth_program/programs/nft_auth_program/: Cargo.toml
nft_auth_program/programs/nft_auth_program/src/: lib.rs
nft_auth_program/tests/: anchor_client_test.ts  borsh_register_product.ts  check_authority.ts  complete_flow_test.ts  create_collection_test.ts  final_register_product.ts  find_discriminators.ts  fixed_register_product.ts  functional_test.ts  initialize_test.ts  manual_register_product.ts  nft_auth_program.js  nft_auth_program.ts  real_initialize_test.ts  register_product_test.ts  simple_collection_test.ts  simple_success_test.ts  simple_test.ts  working_test.ts
