[package]
name = "nft_auth_program"
version = "1.0.0"
description = "NFT QR Scanner Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_auth_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
